# opt_view

./: CMakeLists.txt  README.md  package.xml
config/: backprojection.yaml  joint_state_controller.yaml  loss_probability.yaml  multiagent_command.yaml  optimization.yaml  self_positioning.yaml  view.rviz  visibility_matrix_builder.yaml
gazebo/: ros_control.urdf
include/: backprojection.h  common.h  kalman_filter.h  loss_probability.h  multiagent_command.h  optimization.h  optimization_node.h  pd_rosnode.h  self_positioning.h  target_trajectory.h  visibility_grid.h  visibility_matrix_builder.h  visibility_matrix_builder_node.h
launch/: opt_view.launch  spawn_agent.launch
matlab/: traj_gen.m  traj_gen.m~
meshes/: camera.dae  cell.dae
msg/: Formation.msg  MultiagentPose.msg  ProjectedView.msg  SparseMatrixInt.msg  TripletInt.msg
robots/: flying_camera.urdf.xacro  target.sdf  target.urdf.xacro  visibility_grid.sdf
src/: backprojection_node.cpp  kalman_filter.cpp  loss_probability.cpp  loss_probability.cpp.autosave  loss_probability_node.cpp  multiagent_command.cpp  optimization.cpp  optimization_node.cpp  optimization_node.cpp.autosave  pd_rosnode.cpp  self_positioning.cpp  self_positioning_node.cpp  target_trajectory.cpp  target_trajectory.cpp.autosave  visibility_grid.cpp  visibility_grid.cpp.autosave  visibility_grid.h  visibility_matrix_builder.cpp  visibility_matrix_builder_node.cpp
urdf/: camera_joint.transmission.xacro  camera_joint.urdf (pc304lku's conflicted copy 2019-04-29).xacro  camera_joint.urdf.xacro
worlds/: moving_target.world
